--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -33,6 +33,13 @@ body {
      z-index: -1;	
 }
 
+.project{
+     margin-left: 20px;
+     background-color: #deebf7;
+     padding: 20px;
+     width: 525px;
+}
+
 .project p{
      font-variant: small-caps;
 }
